@startuml modelo_inicial

Partida-->"1..*"Ladron
Partida"1"-->"1"Policia
Policia-->GradoDePolicia
Policia-->Tiempo
Policia-->Comisaria
Policia"1"-->"1..*"Ciudad
Ciudad"1"-->"1..5"LugaresDeInteres
LugaresDeInteres"1"-->"1"Pista
Ladron-->ObjetoRobado
Comisaria-->Ladron

skinparam classAttributeIconSize 0

class Ciudad{
    String nombre
    int kilometrosDeDistancia
    Pista visitar(gradoDePolicia,lugarSeleccionado)

}
class Partida{
    Jugador policiaACargo
    Ladron ladronBuscado
    void registrarPoliciaACargo()
    void registrarLadron()
    void comenzarPartida()
    void viajar(ciudadSeleccionada)
    void mostrarPista()
    void entrarEdificio(lugarSeleccionado)
}

class Comisaria{
    void ordenDeArresto(Ladron sospechoso)
    boolean atrapado(Ladron sospechoso)
}
class Ladron{
    String descripcion
    boolean comparar(Ladron sospechoso)
}

class Policia{
    GradoDePolicia grado
    Ladron sospechoso
    Ciudad ciudadActual
    Ciudad viajar(ciudadSeleccionada)
    Pista entrarEdificio(lugarSeleccionado)
    void ordenDeArresto()
    boolean capturar()

}
interface GradoDePolicia{
    int calcularTiempoDeViaje(int kilometros)
}

interface LugaresDeInteres{
    Pista obtenerPista(gradoDePolicia)
}

interface Pista{
    Pista obtenerPista()
}

interface ObjetoRobado{
    int cantidadPaises
}

class Tiempo{
    int tiempo
    int tiempoTotal(int tiempo)
}

@enduml